[package]
name = "pmax_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
kamadak-exif = "0.5.5"
mozjpeg = "0.10"

[dependencies.image]
version = "0.24"
default-features = false
features = ["jpeg"]

[profile.release]
lto = "fat"
codegen-units = 1

